// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`src/openapi/openapi Binary binary all options 1`] = `
{
  "info": {
    "contact": {
      "email": "nelson.ricardo.gomes@gmail.com",
    },
    "description": "Some test api",
    "license": {
      "name": "Apache 2.0",
      "url": "http://www.apache.org/licenses/LICENSE-2.0.html",
    },
    "termsOfService": "http://swagger.io/terms/",
    "title": "Server API",
    "version": "1.0.0",
  },
  "openapi": "3.0.3",
  "paths": {
    "/health": {
      "get": {
        "description": "Service healthcheck endpoint",
        "operationId": "repeated",
        "responses": {
          "200": {
            "content": {
              "text-plain": {},
            },
            "description": "Successful operation.",
          },
        },
        "summary": "Server Healthcheck",
        "tags": [
          "Internals",
        ],
      },
    },
    "/test": {
      "get": {
        "description": "Test endpoint",
        "operationId": "id",
        "parameters": [
          {
            "description": "some binary base64 value (min:512 chars, max:1024 chars, binary string)",
            "example": "c2FtcGxlMQ==",
            "in": "query",
            "name": "base64string",
            "required": true,
            "schema": {
              "default": "c2FtcGxlMQ==",
              "description": "some binary base64 value (min:512 chars, max:1024 chars, binary string)",
              "format": "binary",
              "maxLength": 1024,
              "minLength": 512,
              "nullable": true,
              "type": "string",
            },
          },
        ],
        "responses": {
          "200": {
            "content": {
              "text-plain": {},
            },
            "description": "Successful operation.",
          },
        },
        "summary": "Server Test",
        "tags": [
          "Internals",
        ],
      },
    },
  },
  "servers": [
    {
      "url": "https://server.com",
    },
  ],
}
`;

exports[`src/openapi/openapi Binary binary all options, declared as parameter 1`] = `
{
  "components": {
    "parameters": {
      "arrayParameter": {
        "description": "some string array parameter",
        "in": "query",
        "name": "arrayParameter",
        "required": true,
        "schema": {
          "description": "some string array parameter",
          "items": {
            "description": "Parameter without description.",
            "type": "string",
          },
          "nullable": true,
          "type": "array",
        },
      },
      "base64string": {
        "description": "some binary base64 value (min:512 chars, max:1024 chars, binary string)",
        "example": "c2FtcGxlMQ==",
        "in": "query",
        "name": "base64string",
        "required": true,
        "schema": {
          "default": "c2FtcGxlMQ==",
          "description": "some binary base64 value (min:512 chars, max:1024 chars, binary string)",
          "format": "binary",
          "maxLength": 1024,
          "minLength": 512,
          "nullable": true,
          "type": "string",
        },
      },
      "base64string2": {
        "description": "some binary base64 value (min:512 chars, max:1024 chars, binary string)",
        "example": "c2FtcGxlMQ==",
        "in": "query",
        "name": "base64string2",
        "required": true,
        "schema": {
          "default": "c2FtcGxlMQ==",
          "description": "some binary base64 value (min:512 chars, max:1024 chars, binary string)",
          "format": "binary",
          "maxLength": 1024,
          "minLength": 512,
          "nullable": true,
          "type": "string",
        },
      },
      "booleanParameter": {
        "description": "some boolean parameter",
        "in": "query",
        "name": "booleanParameter",
        "required": true,
        "schema": {
          "description": "some boolean parameter",
          "nullable": true,
          "type": "boolean",
        },
      },
      "dateTimeParameter": {
        "description": "some datetime parameter (max:25 chars, ISO8601 date-time format)",
        "in": "query",
        "name": "dateTimeParameter",
        "required": true,
        "schema": {
          "description": "some datetime parameter (max:25 chars, ISO8601 date-time format)",
          "format": "date-time",
          "maxLength": 25,
          "minLength": 16,
          "nullable": true,
          "type": "string",
        },
      },
      "numberParameter": {
        "description": "some number parameter",
        "in": "query",
        "name": "numberParameter",
        "required": true,
        "schema": {
          "description": "some number parameter",
          "format": "double",
          "nullable": true,
          "type": "number",
        },
      },
    },
  },
  "info": {
    "contact": {
      "email": "nelson.ricardo.gomes@gmail.com",
    },
    "description": "Some test api",
    "license": {
      "name": "Apache 2.0",
      "url": "http://www.apache.org/licenses/LICENSE-2.0.html",
    },
    "termsOfService": "http://swagger.io/terms/",
    "title": "Server API",
    "version": "1.0.0",
  },
  "openapi": "3.0.3",
  "paths": {
    "/health": {
      "get": {
        "description": "Service healthcheck endpoint",
        "operationId": "repeated",
        "responses": {
          "200": {
            "content": {
              "text-plain": {},
            },
            "description": "Successful operation.",
          },
        },
        "summary": "Server Healthcheck",
        "tags": [
          "Internals",
        ],
      },
    },
    "/test": {
      "get": {
        "description": "Test endpoint",
        "operationId": "id",
        "parameters": [
          {
            "$ref": "#/components/parameters/base64string",
          },
          {
            "$ref": "#/components/parameters/base64string2",
          },
          {
            "$ref": "#/components/parameters/dateTimeParameter",
          },
          {
            "$ref": "#/components/parameters/numberParameter",
          },
          {
            "$ref": "#/components/parameters/booleanParameter",
          },
          {
            "$ref": "#/components/parameters/arrayParameter",
          },
        ],
        "responses": {
          "200": {
            "content": {
              "text-plain": {},
            },
            "description": "Successful operation.",
          },
        },
        "summary": "Server Test",
        "tags": [
          "Internals",
        ],
      },
    },
  },
  "servers": [
    {
      "url": "https://server.com",
    },
  ],
}
`;

exports[`src/openapi/openapi Binary binary all options, declared as parameter should throw an exception, because parameter has 2 variations 1`] = `
{
  "components": {
    "parameters": {
      "base64string": {
        "description": "some binary base64 value (min:512 chars, max:1024 chars, binary string)",
        "example": "c2FtcGxlMQ==",
        "in": "query",
        "name": "base64string",
        "required": true,
        "schema": {
          "default": "c2FtcGxlMQ==",
          "description": "some binary base64 value (min:512 chars, max:1024 chars, binary string)",
          "format": "binary",
          "maxLength": 1024,
          "minLength": 512,
          "nullable": true,
          "type": "string",
        },
      },
    },
  },
  "info": {
    "contact": {
      "email": "nelson.ricardo.gomes@gmail.com",
    },
    "description": "Some test api",
    "license": {
      "name": "Apache 2.0",
      "url": "http://www.apache.org/licenses/LICENSE-2.0.html",
    },
    "termsOfService": "http://swagger.io/terms/",
    "title": "Server API",
    "version": "1.0.0",
  },
  "openapi": "3.0.3",
  "paths": {
    "/health": {
      "get": {
        "description": "Service healthcheck endpoint",
        "operationId": "repeated",
        "responses": {
          "200": {
            "content": {
              "text-plain": {},
            },
            "description": "Successful operation.",
          },
        },
        "summary": "Server Healthcheck",
        "tags": [
          "Internals",
        ],
      },
    },
    "/test": {
      "get": {
        "description": "Test endpoint",
        "operationId": "id",
        "parameters": [
          {
            "$ref": "#/components/parameters/base64string",
          },
        ],
        "responses": {
          "200": {
            "content": {
              "text-plain": {},
            },
            "description": "Successful operation.",
          },
        },
        "summary": "Server Test",
        "tags": [
          "Internals",
        ],
      },
    },
    "/testValid": {
      "get": {
        "description": "Test endpoint",
        "operationId": "id2",
        "parameters": [
          {
            "$ref": "#/components/parameters/base64string",
          },
        ],
        "responses": {
          "200": {
            "content": {
              "text-plain": {},
            },
            "description": "Successful operation.",
          },
        },
        "summary": "Server Test",
        "tags": [
          "Internals",
        ],
      },
    },
  },
  "servers": [
    {
      "url": "https://server.com",
    },
  ],
}
`;

exports[`src/openapi/openapi Binary binary simple 1`] = `
{
  "info": {
    "contact": {
      "email": "nelson.ricardo.gomes@gmail.com",
    },
    "description": "Some test api",
    "license": {
      "name": "Apache 2.0",
      "url": "http://www.apache.org/licenses/LICENSE-2.0.html",
    },
    "termsOfService": "http://swagger.io/terms/",
    "title": "Server API",
    "version": "1.0.0",
  },
  "openapi": "3.0.3",
  "paths": {
    "/health": {
      "get": {
        "description": "Service healthcheck endpoint",
        "operationId": "repeated",
        "responses": {
          "200": {
            "content": {
              "text-plain": {},
            },
            "description": "Successful operation.",
          },
        },
        "summary": "Server Healthcheck",
        "tags": [
          "Internals",
        ],
      },
    },
    "/test": {
      "get": {
        "description": "Test endpoint",
        "operationId": "id",
        "parameters": [
          {
            "description": "Parameter without description. (binary string)",
            "in": "query",
            "name": "base64string",
            "required": false,
            "schema": {
              "description": "Parameter without description. (binary string)",
              "format": "binary",
              "type": "string",
            },
          },
        ],
        "responses": {
          "200": {
            "content": {
              "text-plain": {},
            },
            "description": "Successful operation.",
          },
        },
        "summary": "Server Test",
        "tags": [
          "Internals",
        ],
      },
    },
  },
  "servers": [
    {
      "url": "https://server.com",
    },
  ],
}
`;
